fix background on safari

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,8 @@
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    overscroll-behavior: none;
 }
 
 body,
